# ar-db-handler

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
notebooks/: playground.ipynb  playground_paths.ipynb
scripts/: init_companies_table.py  make_helpers.py
src/ar_db_handler/: __init__.py  _models.py  connection.py  exceptions.py  ids.py  paths.py  records.py
src/ar_db_handler/filings/: __init__.py  errors.py  init.py  schema.sql  sync.py  upserts.py
src/ar_db_handler/metrics/: __init__.py  init.py  schema.sql  writer.py
src/ar_db_handler/queries/: __init__.py  filings.py  metrics.py
tests/: conftest.py  test_filings_schema.py  test_filings_upserts.py  test_ids.py  test_metrics_schema.py  test_metrics_writer.py  test_paths.py  test_queries.py  test_scraper_errors.py  test_sync.py
