[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ar-db-handler"
version = "0.1.0"
description = "SQLite data-access layer for the annual report pipeline (filings.db + metrics.db)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Omaha Insights" }]
dependencies = []  # stdlib sqlite3 only

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "ruff==0.7.0",
    "pre-commit>=3.5",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ar_db_handler = ["filings/schema.sql", "metrics/schema.sql"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by black
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
